syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommBuyStoreItemRequestProtobuf";

message	CommBuyStoreItemRequest  {
		uint32	type = 10;
		uint32	index = 11;
		uint32	number = 12;
		string	expected = 13;
}