syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommRefreshStoreResponseProtobuf";

message	CommRefreshStoreResponse  {
	optional	uint32	result = 10;
	optional	CommRefreshStoreRequest	request = 11;
	optional	PlayerStore	store = 12;
	repeated	PlayerItem	items = 13;
}