syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstNewStoreDiscountTableItemExGoodFomulaProtobuf";

message	ConstNewStoreDiscountTableItemExGoodFomula  {
		string	good_prefix = 1;
		uint32	from = 2;
		uint32	to = 3;
		uint32	factor = 4;
		uint32	number = 5;
		string	cost = 6;
		uint32	cost_number = 7;
}